<resources>
    <string name="app_name">P/Grupo 06</string>
    <string name="api_rest">API Rest</string>
    <string name="cargo">Cargo</string>
    <string name="empleado_firebase">Empleado</string>
    <string name="encuesta">Encuesta</string>
    <string name="imagenes">Imágenes</string>
    <string name="ubicacion">ubicación</string>
    <string name="nomina">Nomina</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="recyclerview_basic">RecyclerView Basic</string>
    <string name="activity_main">Actividad Principal</string>
    <string name="activity_empleado">Empleado (SQLite)</string>
    <string name="horizontal_scrollview">Horizontal ScrollView</string>
    <string name="proyecto_grupo_06">Proyecto\nGrupo 06</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="scrollview">ScrollView</string>
    <string name="longitude_label">Longitud</string>
    <string name="activity_label">Actividad</string>
    <string name="latitude_label">Latitud</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="element_text">Elemento</string>
</resources>